z-index problem solved

--- a/portfolio.css
+++ b/portfolio.css
@@ -123,8 +123,8 @@ body::before {
 }
 
 .start-bnt{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 50px;
     left: 0;
     bottom: 0;
     position: fixed;
@@ -148,6 +148,7 @@ body::before {
     line-height: 1;
     margin: 0;
     cursor: pointer;
+    z-index: 2;
 }
 
 
